--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="wrapper">
     <div class="header">
       <div class="logo1">
-     <a href="/" title="На главную"><img src="images/logo.png" alt="Воздушные винты для сверхлегких летательных аппаратов" class="logo"</a>
+     <a href="/" title="На главную"><img src="images/logo.png" alt="Воздушные винты для сверхлегких летательных аппаратов" class="logo"></a>
      </div>
       <div class="contacts1">
       <span>email: <a href="mailto:konotop1957@mail.ru" target="_top">konotop1957@mail.ru</a><br>Skype: konotop57</span>
@@ -55,7 +55,7 @@
          <p>Изготовление и продажа воздушных винтов для сверхлегких летательных аппаратов</p>
        </header>
        <p>Частный предприниматель Конотоп Александр Васильевич (ЧП Конотоп) – производитель <strong>воздушных винтов для сверхлегкиx летательных аппаратов</strong> (СЛА): самолетов, дельталетов, автожиров, парапланов в Луганске. Коллектив ЧП состоит из группы специалистов, которые имеют многолетний опыт работы с композиционными материалами. </p>
-       <a href="images/prop1.jpg"><img src="images/prop1.jpg" alt="Воздушные винты из композитных материалов"></a></p>
+       <a href="images/prop1.jpg"><img src="images/prop1.jpg" alt="Воздушные винты из композитных материалов"></a>
        <p>Коллектив ЧП Конотоп с 2003 года занимается разработкой, проектированием, изготовлением и испытаниями своих изделий.</p>
        <p>Мы сотрудничаем с производителями летательных аппаратов, как в Украине, так и за рубежом. Благодаря информации, поступающей от наших клиентов, производится анализ потребительского рынка с целью улучшения качества продукции.</p> 
        <p>На сегодняшний день ведется активная работа с изготовителем втулок для
