--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </ul>
     </div>
   </aside>
-  <section>
+  <!-- <section> -->
     <article>
       <header>
        <h1>Мы возобновили работу! Будем рады вашим заказам</h1>
@@ -71,7 +71,7 @@
          <a href="images/patent.jpg"><img src="images/patent.jpg" alt="Разработка воздушных винтов защищена патенами" class="pat"></a>
        </footer>
 </article>
-     </section>
+     <!-- </section> -->
      <address>
       <p><b>2015 ©  ЧП Конотоп А. В. Пропеллеры для сверхмалых летательных аппаратов: самолетов, дельталетов, автожиров, парапланов</b></p>
     </address>
