--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-  <main>
+  <<div class="wrapper">
     <header>
           <div class="logo1">
          <a href="/" title="На главную"><img src="images/logo.png" alt="Воздушные винты для сверхлегких летательных аппаратов" class="logo"></a>
@@ -47,7 +47,7 @@
     </div>
   </aside>
   <!-- <section> -->
-    <article>
+    <main>
       <header>
        <h1>Мы возобновили работу! Будем рады вашим заказам</h1>
          <p>Изготовление и продажа воздушных винтов для сверхлегких летательных аппаратов</p>
@@ -70,13 +70,13 @@
          <p>Продукция защищена патентами. </p>
          <a href="images/patent.jpg"><img src="images/patent.jpg" alt="Разработка воздушных винтов защищена патенами" class="pat"></a>
        </footer>
-</article>
+</main>
      <!-- </section> -->
      <address>
       <p><b>2015 ©  ЧП Конотоп А. В. Пропеллеры для сверхмалых летательных аппаратов: самолетов, дельталетов, автожиров, парапланов</b></p>
     </address>
     
-  </main>
+  </div>
 </body>
 </html>
 
