--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-  <<div class="wrapper">
+  <div class="wrapper">
     <header>
           <div class="logo1">
          <a href="/" title="На главную"><img src="images/logo.png" alt="Воздушные винты для сверхлегких летательных аппаратов" class="logo"></a>
